syntax = "proto3";

option java_package = "com.samples.grpc";
option java_multiple_files = true;

package com.samples.grpc;

service EchoService {
    rpc echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
    string echo = 1;
}

message EchoResponse {
    string echo = 1;
}